--- a/assets/language/de/strings.json
+++ b/assets/language/de/strings.json
@@ -235,7 +235,7 @@
   "countryProvince": "Land, Provinz",
   "playingCategory": "Kategorie, in der er spielt",
   "sportsSchool": "Sportliche Schule, in der er spielt",
-  "individualAchievements":"Individuelle Erfolge",
+  "individualAchievements": "Individuelle Erfolge",
   "nationalTeamSelectionU18": "Nationales Auswahlteam U18",
   "seeMore": "Mehr anzeigen...",
   "seeLess": "Weniger anzeigen",
@@ -350,7 +350,17 @@
   "Plan_4_visualization": "Maximal",
   "Plan_4_quality_4": "Optionale Profilverifizierung",
   "Plan_4_quality_5": "Optionales Hervorheben von Videos (1)",
-  "Plan_4_quality_6": "Gültigkeitsdauer von 12 Monaten"
-
-
+  "Plan_4_quality_6": "Gültigkeitsdauer von 12 Monaten",
+  "prebenjamin": "Pre-Benjamin",
+  "benjamin": "Benjamin",
+  "infantil": "Kinder",
+  "cadete": "Kadett",
+  "juvenil": "Jugend",
+  "sub23": "Unter-23",
+  "senior": "Senior",
+  "spain": "Spanien",
+  "usa": "Vereinigte Staaten",
+  "france": "Frankreich",
+  "italy": "Italien",
+  "germany": "Deutschland"
 }
