--- a/assets/language/en/strings.json
+++ b/assets/language/en/strings.json
@@ -17,7 +17,7 @@
   "error_try_again": "An error occurred. Please try again.",
   "sign_up": "Sign Up",
   "sign_up2": "Sign Up",
-  "name": "NAME",
+  "name": "Name",
   "last_name": "Last Name",
   "birthdate": "Birthdate",
   "personal_email": "Personal Email - Tutor (under 18 years)",
@@ -313,6 +313,7 @@
   "Plan_1_description": "Allows uploading 2 videos, each up to 2 minutes long, with a recommended quality of 1080 Full HD.",
   "Plan_1_long_description": "Basic Subscription: RRP €19.99. Validity period of 1 month. Allows uploading 2 videos (3 videos) each up to 2 minutes long, with a recommended quality of 1080 Full HD. Upload a new video once you have filled your quota of 2; to do so, you must delete one from the platform to effectively upload, while keeping your 2 videos (3 videos) active. Highlight your video: RRP €2.99 per video (Recommendation €0.99 per video).",
   "Plan_1_quality_1": "Upload up to 2 videos",
+  "Plan_1_quality_11": "15-day trial",
   "Plan_1_quality_2": "Videos up to 2 minutes",
   "Plan_1_quality_3": "Viewership: ",
   "Plan_1_visualization": "Low",
