--- a/assets/language/pt/strings.json
+++ b/assets/language/pt/strings.json
@@ -17,7 +17,7 @@
   "error_try_again": "Ocorreu um erro. Por favor, tente novamente.",
   "sign_up": "Inscrever-se",
   "sign_up2": "Alistar-se",
-  "name": "NOME",
+  "name": "Nome",
   "last_name": "Sobrenome",
   "birthdate": "Data de Nascimento",
   "personal_email": "Email Pessoal - Tutor (-18 anos)",
@@ -312,6 +312,7 @@
   "Plan_1_description": "Permite carregar 2 vídeos com no máximo 2 minutos cada, com qualidade recomendada de 1080 Full HD.",
   "Plan_1_long_description": "Assinatura Básica: Preço 19,99€. Duração da assinatura de um mês. Permite carregar 2 vídeos (3 vídeos) com no máximo 2 minutos cada, com qualidade recomendada de 1080 Full HD. Para carregar um novo vídeo após atingir o limite de 2, é necessário excluir um vídeo da plataforma para que o upload seja efetivo, mantendo assim seus 2 vídeos (3 vídeos) ativos. Destaque seu vídeo: Preço 2,99€ por vídeo (Recomendação 0,99€ por vídeo).",
   "Plan_1_quality_1": "Carregue até 2 vídeos",
+  "Plan_1_quality_11": "Teste de 15 dias",
   "Plan_1_quality_2": "Vídeos de até 2 minutos",
   "Plan_1_quality_3": "Visualização: ",
   "Plan_1_visualization": "Baixa",
